# jira-reporting

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  jira_model_v1_2.sql  main.py  mapping.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
loader/: config.py  db.py  etl.py  jira_dc.py  logging_setup.py  transforms.py
scripts/: dump_issues.py  preview_by_type.py  preview_issues.py  preview_parsed.py
src/jira_reporting/: __init__.py  config.py  extract.py  jira_api.py  main.py  parse.py  parsing.py
tests/: test_auth.py  test_parse.py  test_search.py
