[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-reporting"
version = "0.1.0"
dependencies = [
  "httpx==0.27.2",
  "python-dotenv==1.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jira_reporting"]

[project.scripts]
jira-reporting = "jira_reporting.main:main"
